auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "630c2ecf",
+   "id": "f3b3ad81",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bedc334",
+   "id": "bb1a203d",
    "metadata": {},
    "source": [
     "# About\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "661f3734",
+   "id": "69e4c56d",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad470294",
+   "id": "b5452b7d",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb0922fd",
+   "id": "cf0cc9d5",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f95e11",
+   "id": "143f38c4",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -154,7 +154,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244754.897235,
+  "date": 1766809441.7255147,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
