--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e08cab2",
+   "id": "ce97c496",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20950cb4",
+   "id": "7ade7ea1",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4541aa5a",
+   "id": "67186a88",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f9a25e7",
+   "id": "afbad6e6",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b882d8c1",
+   "id": "72c12e51",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f2307f",
+   "id": "fab1a6fb",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70cd4f78",
+   "id": "5156afa5",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45d8c44b",
+   "id": "257795df",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af49655",
+   "id": "89f12acf",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea8ca1c",
+   "id": "9c7c8514",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679d6c73",
+   "id": "a5aa9730",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce4068d7",
+   "id": "40d1a35d",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c096a7",
+   "id": "35b409df",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b2c8b21",
+   "id": "b2daf4e0",
    "metadata": {
     "hide-output": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e828fe3",
+   "id": "7f9785a3",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e608434",
+   "id": "f4d2a936",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8f8558b",
+   "id": "8b96694b",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdcde9da",
+   "id": "68b6ef3f",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b78914",
+   "id": "a10b246c",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1840963d",
+   "id": "22668f81",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f1ba3e5",
+   "id": "59a8610d",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bef39a1",
+   "id": "93587c86",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23382ccf",
+   "id": "b76c6b53",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "052ff4e5",
+   "id": "75c62e81",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c58d1b6d",
+   "id": "9e10b09e",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affb57ec",
+   "id": "5ab96411",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ccc4fdf",
+   "id": "493cdd44",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c299f9",
+   "id": "9c185272",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3fe5e3",
+   "id": "6c112654",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386b7ac3",
+   "id": "e9c2938a",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1297d274",
+   "id": "ed898b77",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e732a40d",
+   "id": "67cc4fe8",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a024eebe",
+   "id": "d6e5ed99",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18024b5f",
+   "id": "132a59af",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17053ff3",
+   "id": "8550d780",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2bf21a0",
+   "id": "9277fc36",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1efc6ace",
+   "id": "2bb8b490",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52bdf066",
+   "id": "a5807936",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e2358c4",
+   "id": "2ef479c1",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "308c497b",
+   "id": "f3e15ace",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a030972",
+   "id": "2269c3ce",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb193972",
+   "id": "881a71b9",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b662ebb",
+   "id": "7bb3b81c",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "313b8bc3",
+   "id": "743602ef",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f42d477",
+   "id": "a49959f3",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5892fec",
+   "id": "9a358bf1",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b330351c",
+   "id": "3a8f3d51",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a6512b",
+   "id": "9cfe8357",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fdabaff",
+   "id": "4d79af6c",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ead12d31",
+   "id": "8dc58013",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "febff227",
+   "id": "3b80d122",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d31a5c",
+   "id": "65a5a3d1",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.4090016,
+  "date": 1766809442.246822,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
