--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6358a05e",
+   "id": "d9bcfe2f",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b49bd5",
+   "id": "161816a0",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db416f9",
+   "id": "47ae4c06",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e703805c",
+   "id": "ba910e7b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2858ccdc",
+   "id": "928c195c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "985b68e5",
+   "id": "478ba6af",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c981a3db",
+   "id": "0f86c5d3",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69392d4c",
+   "id": "e3d988e3",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6fed904",
+   "id": "a8b0e3e0",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884110d0",
+   "id": "a0e137c4",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158f9508",
+   "id": "3fa5470b",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee55354",
+   "id": "bba02c0d",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bbe6446",
+   "id": "85114da8",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edd01a8a",
+   "id": "f9e25690",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211d04e3",
+   "id": "e1a7a3ad",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc41d74",
+   "id": "d44ae356",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af86e05b",
+   "id": "d2e348bf",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5336e5f1",
+   "id": "2794f5c9",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7d4b845",
+   "id": "9faf1b5c",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f90ff4a",
+   "id": "f8115295",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6b808ad",
+   "id": "7fc132b3",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136ea112",
+   "id": "7a66c528",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16022f5",
+   "id": "199ff668",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c8094b",
+   "id": "c1968263",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d62ab6f6",
+   "id": "dd120fa7",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f7a1b70",
+   "id": "182c10eb",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b9fdd8c",
+   "id": "29d457d6",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1df362da",
+   "id": "e51e95a3",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd50b62",
+   "id": "da915d8f",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcb4865f",
+   "id": "43bfdabb",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb225d3",
+   "id": "59bad2e7",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca0b3ae",
+   "id": "748386a3",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e5cd75c",
+   "id": "03c598d7",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "354e5029",
+   "id": "dc8e4f91",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24a28250",
+   "id": "2c83790b",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d93dc81",
+   "id": "3b3e0f0f",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76a200b",
+   "id": "b9038d44",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "796e1597",
+   "id": "fcc52cfc",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a20c65d2",
+   "id": "3096508b",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38cbec4",
+   "id": "1efc5a90",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f522e4ad",
+   "id": "a938a056",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "febfa400",
+   "id": "3d6cb406",
    "metadata": {
     "hide-output": false
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33452894",
+   "id": "89775829",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03dcddbe",
+   "id": "bee8b3b7",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f5d38d",
+   "id": "ceea52eb",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1385365d",
+   "id": "e4a97ad8",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389eadeb",
+   "id": "a7f6e321",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3daefa08",
+   "id": "2d634dda",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8504ad3b",
+   "id": "e96bc301",
    "metadata": {
     "hide-output": false
    },
@@ -1024,7 +1024,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.479406,
+  "date": 1766809442.3190165,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
