--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bf34e3d",
+   "id": "8f4bc0e8",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ae71f4",
+   "id": "3e5768e2",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2200816",
+   "id": "e8c5ccde",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "babe5e33",
+   "id": "d88af21a",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e97949bf",
+   "id": "282f7c7c",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f430556",
+   "id": "ce74804e",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03740b61",
+   "id": "c2afcf45",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180265cb",
+   "id": "45f2cd5a",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5be735e6",
+   "id": "ef95c89b",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26f3db04",
+   "id": "b286f9f4",
    "metadata": {
     "hide-output": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a21177",
+   "id": "1d91aab6",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b711e81f",
+   "id": "00c82f2d",
    "metadata": {
     "hide-output": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b15cbff1",
+   "id": "3962aaf3",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a07a6e81",
+   "id": "4f824834",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11b24e53",
+   "id": "b9b6f0e6",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "704d758d",
+   "id": "2f69dcbc",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7e8c0b5",
+   "id": "0f4b791f",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe29d8b7",
+   "id": "cf101c47",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f40b011f",
+   "id": "d657912a",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2774e39b",
+   "id": "dc8c03c6",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84dc358",
+   "id": "f6e3f963",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5148603e",
+   "id": "97414d38",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68a1acb1",
+   "id": "06123420",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbde489f",
+   "id": "4a459ef7",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a979f223",
+   "id": "a4995a8b",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "878420dd",
+   "id": "e0ca48ce",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93db5476",
+   "id": "396d1e29",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bbe9631",
+   "id": "cc19d291",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a284b02c",
+   "id": "27104f94",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53438186",
+   "id": "81c5b8da",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9989aecb",
+   "id": "f7689441",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09672a0",
+   "id": "9ea68f97",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8486e423",
+   "id": "590bf93e",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a467d7a",
+   "id": "cf4f424c",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf14b437",
+   "id": "68434bcf",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5974614",
+   "id": "b5ceb3eb",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db7c8101",
+   "id": "1b5db22a",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e82627",
+   "id": "e4ac853a",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5315c051",
+   "id": "e73d7e29",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5045780e",
+   "id": "831f94ca",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d51636",
+   "id": "a1c4e810",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e30567",
+   "id": "42c6d522",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac031ea",
+   "id": "370b7c05",
    "metadata": {
     "hide-output": false
    },
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c19e0c4a",
+   "id": "0507df12",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7cabb84",
+   "id": "b1d670e6",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "304b9862",
+   "id": "c3bcbaf2",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b546b9c3",
+   "id": "dc998f4f",
    "metadata": {
     "hide-output": false
    },
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32a0e58b",
+   "id": "f153080f",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46bd2b3",
+   "id": "beb5d5ff",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77b233cb",
+   "id": "321da9f2",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17af819c",
+   "id": "f352b0ee",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0647b1a5",
+   "id": "4bff4da0",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c530cca7",
+   "id": "a8565b87",
    "metadata": {
     "hide-output": false
    },
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c704e4e",
+   "id": "5cd9461d",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5009759",
+   "id": "7bc49cf2",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9177dbc",
+   "id": "97b5a9f5",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce8d5b8f",
+   "id": "9784b25a",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2de03ece",
+   "id": "95bedc83",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7cd701",
+   "id": "c367d8a2",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.6136913,
+  "date": 1766809442.455719,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
