--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff975c3b",
+   "id": "855475bd",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df5be4c5",
+   "id": "82a870a6",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd3830de",
+   "id": "1ef355b0",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2d471e6",
+   "id": "8feb3d9b",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab196c8",
+   "id": "7420edb8",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a157f55f",
+   "id": "91e7e8eb",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa942e1c",
+   "id": "f6c1bdc6",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d82826c",
+   "id": "9b86c037",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a61551",
+   "id": "355380bf",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0429849",
+   "id": "4dd3838e",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd1ae86",
+   "id": "3898dd84",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1473c3a",
+   "id": "b276ba86",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85a65d35",
+   "id": "a8421acb",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c46355",
+   "id": "397be24e",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1531c0a9",
+   "id": "d2f7e31e",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef440354",
+   "id": "f38d4ce9",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6427d650",
+   "id": "f98a92e9",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ae67e1f",
+   "id": "8f4424f3",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6abbf0",
+   "id": "5e05da26",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1779b3cd",
+   "id": "5908f434",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8045b2c1",
+   "id": "133664b7",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71f0a9c",
+   "id": "e40c906d",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c037216",
+   "id": "a2ee27e9",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f901d14",
+   "id": "23163fd1",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477fbe18",
+   "id": "ff2a422c",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c1587b5",
+   "id": "fcee90e1",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70410ea3",
+   "id": "c98d54a0",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2aa417d",
+   "id": "67b03833",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db1f2543",
+   "id": "ad0b3dec",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04f53db",
+   "id": "0a9c9236",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01b1db24",
+   "id": "fa6f400f",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3766cff3",
+   "id": "f5edc75f",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c369e2",
+   "id": "e8293fd1",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33f3f62",
+   "id": "6506d20d",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d82e99",
+   "id": "922555b3",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb65e515",
+   "id": "6002c127",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b875988",
+   "id": "c4780cc0",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01542701",
+   "id": "78dee35c",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30c21da5",
+   "id": "e7cf3b02",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5f15a6b",
+   "id": "243975e3",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6e42b8",
+   "id": "146d8420",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "634373c1",
+   "id": "5d548964",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38954088",
+   "id": "9318f4ee",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94acea90",
+   "id": "cd03f2fb",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d31963d6",
+   "id": "3c91e192",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6640525",
+   "id": "9503ab61",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fd9acd",
+   "id": "95bc0443",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68261b5e",
+   "id": "5c6f30e4",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79644ebe",
+   "id": "f2235b3c",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f24fa2",
+   "id": "8550f630",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "698e1f36",
+   "id": "48914995",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0738c8ef",
+   "id": "aed7c550",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "877e81a6",
+   "id": "29f41b4a",
    "metadata": {
     "hide-output": false
    },
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "633ad14f",
+   "id": "cf4d7594",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad30f7f2",
+   "id": "f88339f5",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af6b6e4c",
+   "id": "9ed78ec9",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fafeda89",
+   "id": "9a56d08f",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c24140",
+   "id": "b1150424",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7740a9",
+   "id": "3e6d495e",
    "metadata": {
     "hide-output": false
    },
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8635c88",
+   "id": "e3bf114a",
    "metadata": {
     "hide-output": false
    },
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "876996a2",
+   "id": "6a18302c",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31feaf51",
+   "id": "0bca09e4",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52bad820",
+   "id": "8cbb1fec",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da4d9ac",
+   "id": "db766388",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b2a914",
+   "id": "59cc963f",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f5eae7",
+   "id": "e7edccf4",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f25444",
+   "id": "4d5ba534",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0e6f0ea",
+   "id": "374722b8",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f82891d",
+   "id": "b9ad7513",
    "metadata": {
     "hide-output": false
    },
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b101a76",
+   "id": "7c673a90",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d88a475d",
+   "id": "f84b48e7",
    "metadata": {
     "hide-output": false
    },
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "265dbcad",
+   "id": "f31f705e",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50902530",
+   "id": "09a428e3",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2174da59",
+   "id": "7c0f4f09",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a42ff9e",
+   "id": "8a1e84ed",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e8f9154",
+   "id": "aa5beefc",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a45039a",
+   "id": "351d8cc8",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6816a095",
+   "id": "581a60fb",
    "metadata": {
     "hide-output": false
    },
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07d064d",
+   "id": "afb6a77e",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfcd3979",
+   "id": "61481b92",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c3055e",
+   "id": "5b749f28",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.808755,
+  "date": 1766809442.6524742,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
