--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb395af3",
+   "id": "f8c130af",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "917ade05",
+   "id": "5bf0dce5",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd18ce36",
+   "id": "c7b6cb56",
    "metadata": {},
    "source": [
     "# References\n",
@@ -39,7 +39,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.815626,
+  "date": 1766809442.6594386,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
