--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aec1bc28",
+   "id": "9832a1aa",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b5ce9b",
+   "id": "aab975e6",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6eb2d83",
+   "id": "d69468c8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b3fb66",
+   "id": "3589cd25",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e96596b7",
+   "id": "fa25f031",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "636ed1a2",
+   "id": "aad74b14",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a884d274",
+   "id": "a105b62e",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57771d89",
+   "id": "be92558f",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0bfd211",
+   "id": "0d6b85e8",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bdd0a76",
+   "id": "e37e591b",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbfbaf53",
+   "id": "9b09f072",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b5184b",
+   "id": "c77dcbec",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b363aac1",
+   "id": "74e8f6d1",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5087cf5f",
+   "id": "8dd4b6f5",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09cf9012",
+   "id": "d749c978",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46b0f00d",
+   "id": "7847f620",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27427a8c",
+   "id": "2abc6c93",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cddeba",
+   "id": "b2a37979",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a69a7ced",
+   "id": "0c098342",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd5d97e",
+   "id": "afd01336",
    "metadata": {
     "hide-output": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228b8f98",
+   "id": "8c545374",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4ec4923",
+   "id": "4f1434a7",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "356faf27",
+   "id": "d5a01f89",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ffbe3f4",
+   "id": "67143364",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9010eac",
+   "id": "b7c86d5a",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0bfb19c",
+   "id": "f49d8bd6",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08281fc5",
+   "id": "3746dc49",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86723cb2",
+   "id": "4853bb04",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93b475b",
+   "id": "6dcba9f4",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74ea684a",
+   "id": "2f68f305",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d552ec",
+   "id": "685730f9",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47ed86fd",
+   "id": "4aecf7fa",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5bffb0c",
+   "id": "5ab449f6",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fadeee11",
+   "id": "0706f8eb",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79567851",
+   "id": "15d2257f",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2324c34e",
+   "id": "282efceb",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae67f453",
+   "id": "4641e3ca",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f88ae6",
+   "id": "342f72ab",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3720f0ef",
+   "id": "d38dcf3b",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b3cf7b",
+   "id": "8ab51a62",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f8136b",
+   "id": "770058ed",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f278b7f",
+   "id": "f336842c",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2a7ffc6",
+   "id": "f5aa0216",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826f2c73",
+   "id": "332af302",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c444d34",
+   "id": "6ec90b6c",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1708a68",
+   "id": "4db9300e",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31071eea",
+   "id": "ae0180e4",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d916e891",
+   "id": "899ab5c4",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c0823f8",
+   "id": "765d0846",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c1b99a",
+   "id": "264ca0df",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "662adb3f",
+   "id": "bbcecbcf",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f784db32",
+   "id": "0a0867e3",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e7ac9c1",
+   "id": "bc983781",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d159123c",
+   "id": "28c9d762",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a47ed873",
+   "id": "78f373fb",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13c4b2d",
+   "id": "d99b2831",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c7af8f",
+   "id": "94040fc8",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa165c9",
+   "id": "76fd4fd4",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5172996a",
+   "id": "8a344ea7",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe9b6d98",
+   "id": "2175fd2e",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb16699",
+   "id": "5bef4e05",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe37f6ae",
+   "id": "647a5213",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92c471df",
+   "id": "eb8077b9",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e278fb9b",
+   "id": "533c900f",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc336c8",
+   "id": "1307d8e1",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.101336,
+  "date": 1766809441.9408104,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
