--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8bcb944",
+   "id": "eb770ab7",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9169cefc",
+   "id": "c37e0460",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f45b177",
+   "id": "0639f0d7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f7ae40",
+   "id": "62946b52",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01722300",
+   "id": "0b895f12",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f36900",
+   "id": "e2810b21",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99eaec5",
+   "id": "29db2e55",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1bb02cf",
+   "id": "fbde9f8e",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66583da0",
+   "id": "588c7ba5",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f2f785b",
+   "id": "6eea8d81",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55084c33",
+   "id": "9df09397",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43bde8ea",
+   "id": "d8875ee9",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66bc32e4",
+   "id": "2f62183d",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ce8e4e8",
+   "id": "3b971c75",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0573fb6f",
+   "id": "e623ce3d",
    "metadata": {
     "hide-output": false
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce9de378",
+   "id": "bad2b9e5",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f2df3c2",
+   "id": "3eecae7d",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d72b4e",
+   "id": "8419c5f7",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b335e441",
+   "id": "2b3ed6be",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d4f0ebc",
+   "id": "fde1ca1b",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82faad1c",
+   "id": "1a220471",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d8f728",
+   "id": "fb666469",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b716b54f",
+   "id": "a9925ea3",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cda4dac1",
+   "id": "1507200b",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6dc97e",
+   "id": "6f21509e",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bff392c",
+   "id": "857f1b9b",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "776f9c51",
+   "id": "323445d4",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3011a5",
+   "id": "ed2b0d67",
    "metadata": {
     "hide-output": false
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b548f3a",
+   "id": "0c7a0811",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b213f6",
+   "id": "477b68ee",
    "metadata": {
     "hide-output": false
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c142fd08",
+   "id": "04bf1296",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c4e2f3",
+   "id": "7e3eae7b",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "329591cc",
+   "id": "eb484e3a",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3465be9e",
+   "id": "d40fe885",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67fb7de7",
+   "id": "6afa38d9",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c847896",
+   "id": "b9b73752",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1d1de5a",
+   "id": "51afe378",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef634b5b",
+   "id": "943df756",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef1e2ef4",
+   "id": "aa8804d0",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3ba8ba8",
+   "id": "07faa444",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b50f21",
+   "id": "0b82febb",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a030085",
+   "id": "247303ad",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1a1b0be",
+   "id": "c192c258",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9662db5",
+   "id": "ef2d4d70",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab7fa8be",
+   "id": "7daa1680",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22da66ba",
+   "id": "a401ec5b",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -723,7 +723,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.559107,
+  "date": 1766809442.4007325,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
