--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "44634d0a",
+   "id": "889e0226",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b296345",
+   "id": "2e02b137",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b104d73",
+   "id": "3657b1c8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79dcbb3",
+   "id": "8c1877b3",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b1fedb8",
+   "id": "f1226f78",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10a85426",
+   "id": "68615adb",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "015526c7",
+   "id": "1deb1a36",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec6b165",
+   "id": "92ee546c",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211b1c75",
+   "id": "08e2b681",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b9f737a",
+   "id": "0e05f189",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27d80717",
+   "id": "70f05b8a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6210994e",
+   "id": "a1524e1e",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1006db47",
+   "id": "a8df9d6f",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61f09c38",
+   "id": "46711df7",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96eb565",
+   "id": "bac5a391",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b5a954a",
+   "id": "44cad674",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dbcb270",
+   "id": "a3423c68",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03b496d7",
+   "id": "6d9a9f52",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a078719",
+   "id": "51e1ea08",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe8944bf",
+   "id": "d4c0985e",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "673b0f1f",
+   "id": "1e2a727f",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af29a612",
+   "id": "30ae1754",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80db389c",
+   "id": "0d65e064",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952645bc",
+   "id": "885f8144",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "546f699f",
+   "id": "4ba5c832",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "257b4be0",
+   "id": "91c0e411",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7758aec7",
+   "id": "521414f7",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "597bcc2c",
+   "id": "61f39d6b",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16200ff8",
+   "id": "779ca483",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eda1576",
+   "id": "a3e7ec29",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62f6a39a",
+   "id": "fafcd0ca",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3181aa",
+   "id": "06067a00",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1358c090",
+   "id": "97f0de7c",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ccd4143",
+   "id": "56fb2c89",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f056e09e",
+   "id": "0b4ae7ab",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f78d655",
+   "id": "0874e50d",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c302af26",
+   "id": "3c307f5b",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de40f71e",
+   "id": "4e9921c8",
    "metadata": {
     "hide-output": false
    },
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c469cf00",
+   "id": "c434080e",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79be6b9d",
+   "id": "6afb256c",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2486de5",
+   "id": "6977a1fd",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b29e39c",
+   "id": "87b7f802",
    "metadata": {
     "hide-output": false
    },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af1ef005",
+   "id": "66a52e31",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6fe8289",
+   "id": "ebac5414",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1104ff5",
+   "id": "889acc5f",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff136df",
+   "id": "84bf12a7",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0beb2f71",
+   "id": "004e018b",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f8a96d",
+   "id": "06c6ed00",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55895adb",
+   "id": "18dfdeb3",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9a7002",
+   "id": "f12a9b2a",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ea13e8b",
+   "id": "4ead98e9",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c58efc4b",
+   "id": "151eafcc",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74dc6cdb",
+   "id": "7ae207c2",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b640f2a6",
+   "id": "354a12e2",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f20e64",
+   "id": "f644a6a3",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba8b550f",
+   "id": "e7226fe0",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c8d046b",
+   "id": "3c60c480",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3dbc2e7",
+   "id": "a8c63293",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e899f02b",
+   "id": "da75a544",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32886bb1",
+   "id": "ccbc871d",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46c032db",
+   "id": "124493eb",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "135b5afb",
+   "id": "4a45a291",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb81585e",
+   "id": "a4a8ea73",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a89f07db",
+   "id": "3818cff7",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c77a132d",
+   "id": "36f2f692",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141743c3",
+   "id": "b0927b05",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "897cda0f",
+   "id": "46c42f76",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8123fd",
+   "id": "dd1926a8",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566c167d",
+   "id": "c1cab6f9",
    "metadata": {
     "hide-output": false
    },
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d18406b",
+   "id": "e6153790",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1047,7 +1047,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.6441324,
+  "date": 1766809442.486151,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
