--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "79d5381e",
+   "id": "07415887",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b58f30e",
+   "id": "c7c37001",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f5cffec",
+   "id": "a0b9434a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b938687a",
+   "id": "be0669a4",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111fbcb3",
+   "id": "b3439902",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d963fbe",
+   "id": "3003c5b5",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187d3db2",
+   "id": "cabbb75a",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e339b99c",
+   "id": "cf1fe9d1",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4020f4f",
+   "id": "1abb0785",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14576fec",
+   "id": "10e80a33",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f8be79d",
+   "id": "9b6c5c2c",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf0f454b",
+   "id": "61a9fe57",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffdf10ca",
+   "id": "2b1cca60",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ce6cc9",
+   "id": "187891ee",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bffa66dc",
+   "id": "175e9c48",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d641be",
+   "id": "c0ef58bf",
    "metadata": {
     "hide-output": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "535ce0bb",
+   "id": "6e45ebf4",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aba86ea",
+   "id": "17534c3e",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7631c516",
+   "id": "fa8e638b",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df6dd19d",
+   "id": "32365c10",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4a23d7e",
+   "id": "6a12abfc",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83aa59a4",
+   "id": "ef3f6d7d",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a014b2",
+   "id": "e38f3a6b",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fbab404",
+   "id": "b724f218",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac653b66",
+   "id": "8ab29a0d",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19136c0a",
+   "id": "50de4fba",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9938b61",
+   "id": "b5cf4bef",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98065ae6",
+   "id": "638cc541",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77c52ec",
+   "id": "7a9f357e",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103ec6f4",
+   "id": "e8a34b2f",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eeaad1b",
+   "id": "a688f446",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1189e88d",
+   "id": "ce69d394",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc0445c",
+   "id": "7315ee15",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "403b58dd",
+   "id": "d886b72a",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c037b83a",
+   "id": "1b623fd1",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba6d2cc",
+   "id": "17d8d518",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b35e8c9c",
+   "id": "b7713faa",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a00eae",
+   "id": "4e86310d",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a2922b9",
+   "id": "cfe53bf9",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.749365,
+  "date": 1766809442.5973182,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
