--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a0b62d4",
+   "id": "5a05079e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f56814b0",
+   "id": "cae69108",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -22,33 +22,33 @@
     "\n",
     "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/autodiff.html)[](https://jax.quantecon.org/hopenhayn.html)[](https://jax.quantecon.org/ifp_dl.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/jax_nn.html)[](https://jax.quantecon.org/job_search.html)[](https://jax.quantecon.org/keras.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/lucas_model.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings_1.html)[](https://jax.quantecon.org/opt_savings_2.html)[](https://jax.quantecon.org/overborrowing.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2025-12-08 03:38|cache|67.79|✅|\n",
-    "|arellano|2025-12-08 03:38|cache|22.96|✅|\n",
-    "|autodiff|2025-12-08 03:38|cache|13.56|✅|\n",
-    "|hopenhayn|2025-12-08 03:39|cache|24.93|✅|\n",
-    "|ifp_dl|2025-12-08 03:39|cache|35.94|✅|\n",
-    "|ifp_egm|2025-12-08 03:42|cache|144.16|✅|\n",
-    "|intro|2025-12-08 03:42|cache|0.9|✅|\n",
-    "|inventory_dynamics|2025-12-08 03:42|cache|8.71|✅|\n",
-    "|inventory_ssd|2025-12-08 03:42|cache|10.03|✅|\n",
-    "|jax_intro|2025-12-08 03:42|cache|19.67|✅|\n",
-    "|jax_nn|2025-12-09 01:44|cache|82.48|✅|\n",
-    "|job_search|2025-12-08 03:43|cache|10.42|✅|\n",
-    "|keras|2025-12-08 03:44|cache|26.9|✅|\n",
-    "|kesten_processes|2025-12-08 03:44|cache|11.27|✅|\n",
-    "|lucas_model|2025-12-08 03:44|cache|18.51|✅|\n",
-    "|markov_asset|2025-12-08 03:44|cache|12.2|✅|\n",
-    "|mle|2025-12-08 03:45|cache|16.87|✅|\n",
-    "|newtons_method|2025-12-08 03:48|cache|190.25|✅|\n",
-    "|opt_invest|2025-12-08 03:48|cache|22.8|✅|\n",
-    "|opt_savings_1|2025-12-08 03:49|cache|43.51|✅|\n",
-    "|opt_savings_2|2025-12-08 03:49|cache|21.13|✅|\n",
-    "|overborrowing|2025-12-08 03:50|cache|24.55|✅|\n",
-    "|short_path|2025-12-08 03:50|cache|4.31|✅|\n",
-    "|status|2025-12-08 03:50|cache|7.24|✅|\n",
-    "|troubleshooting|2025-12-08 03:42|cache|0.9|✅|\n",
-    "|wealth_dynamics|2025-12-08 03:53|cache|153.26|✅|\n",
-    "|zreferences|2025-12-08 03:42|cache|0.9|✅|\n",
+    "|aiyagari_jax|2025-12-22 03:40|cache|67.14|✅|\n",
+    "|arellano|2025-12-22 03:40|cache|22.95|✅|\n",
+    "|autodiff|2025-12-22 03:41|cache|13.41|✅|\n",
+    "|hopenhayn|2025-12-22 03:41|cache|25.67|✅|\n",
+    "|ifp_dl|2025-12-22 03:42|cache|35.55|✅|\n",
+    "|ifp_egm|2025-12-22 03:44|cache|144.14|✅|\n",
+    "|intro|2025-12-22 03:44|cache|0.79|✅|\n",
+    "|inventory_dynamics|2025-12-22 03:44|cache|8.79|✅|\n",
+    "|inventory_ssd|2025-12-22 03:44|cache|9.65|✅|\n",
+    "|jax_intro|2025-12-22 03:45|cache|19.64|✅|\n",
+    "|jax_nn|2025-12-22 03:45|cache|42.98|✅|\n",
+    "|job_search|2025-12-22 03:46|cache|10.07|✅|\n",
+    "|keras|2025-12-22 03:46|cache|26.81|✅|\n",
+    "|kesten_processes|2025-12-22 03:46|cache|11.68|✅|\n",
+    "|lucas_model|2025-12-22 03:47|cache|18.54|✅|\n",
+    "|markov_asset|2025-12-22 03:47|cache|12.36|✅|\n",
+    "|mle|2025-12-22 03:47|cache|17.16|✅|\n",
+    "|newtons_method|2025-12-22 03:50|cache|191.25|✅|\n",
+    "|opt_invest|2025-12-22 03:51|cache|22.75|✅|\n",
+    "|opt_savings_1|2025-12-22 03:51|cache|42.64|✅|\n",
+    "|opt_savings_2|2025-12-22 03:52|cache|21.2|✅|\n",
+    "|overborrowing|2025-12-22 03:52|cache|24.39|✅|\n",
+    "|short_path|2025-12-22 03:52|cache|4.16|✅|\n",
+    "|status|2025-12-22 03:52|cache|7.13|✅|\n",
+    "|troubleshooting|2025-12-22 03:44|cache|0.79|✅|\n",
+    "|wealth_dynamics|2025-12-22 03:55|cache|154.33|✅|\n",
+    "|zreferences|2025-12-22 03:44|cache|0.79|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions` that has\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ce3e17d",
+   "id": "5ce7a3b2",
    "metadata": {
     "hide-output": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c50bce6",
+   "id": "c30aaeb7",
    "metadata": {},
    "source": [
     "and the following package versions"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a2e3d21",
+   "id": "3f9b54c0",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a53e8185",
+   "id": "6fb035f5",
    "metadata": {},
    "source": [
     "You can check the backend used by JAX using:"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6c9a78e",
+   "id": "de663de4",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae4bcca3",
+   "id": "8dc87a64",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f456c05",
+   "id": "3ab5340d",
    "metadata": {
     "hide-output": false
    },
@@ -133,7 +133,7 @@
   }
  ],
  "metadata": {
-  "date": 1765244755.7709463,
+  "date": 1766809442.614795,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
